# machineconfig

./: .aider.chat.history.md  .gitignore  .pre-commit-config.yaml  .ruff.toml  .style.yapf  .ve.ini  .ve_path  404.html  CONTRIBUTING.md  CRUSH.md  Dockerfile  Dockerfile_databricks  MANIFEST.in  Makefile  README.md  TODO_MAC_SUPPORT.md  TODO_REPLACE_INSPECT.md  basic_test.py  build.sh  build_and_publish.sh  docker-compose.yml  docker_build_latest.ps1  docker_build_latest.sh  docker_build_latest_databricks.sh  err.txt  f.ps1  f.py  file.py  file_checklist.md  index.html  llm.md  mkdocs.yml  more_cli_tools.md  mypy.ini  objects.inv  optimization_recommendations.md  p.txt  pathextended_usage_report.md  publish_on_pypi  pyproject.toml  (+9 more)
.ai/repo_task/: file_checklist.md
.cursor/rules/: python_dev.mdc
.devcontainer/: devcontainer.json
.gemini/: settings.json
.github/: PYPI_PUBLISHING_SETUP.md  copilot-instructions.md
.github/chatmodes/: Thinking-Beast-Mode.chatmode.md  Ultimate-Transparent-Thinking-Beast-Mode.chatmode.md
.github/skills/machineconfig/: SKILL.md
.github/skills/make-github-installer-config/: SKILL.md
.github/workflows/: docs.yml  publish-to-pypi.yml
.kiro/specs/macos-full-support/: design.md  requirements.md  tasks.md
.linters/: mypy_result.md  pylint_result.md  pyrefly_result.md  pyright_result.md  pyright_result_final.md  pyright_result_new.md  ruff_result.md
api/: index.html
api/cluster/: index.html
api/cluster/remote/: index.html
api/cluster/sessions/: index.html
api/jobs/: index.html
api/jobs/installer/: index.html
api/utils/: index.html
changelog/: index.html
cli/: index.html
cli/cloud/: index.html
cli/devops/: index.html
cli/fire/: index.html
cli/mcfg/: index.html
cli/sessions/: index.html
containers/: build.sh  gemini-cli-container  launch_image.sh  prompt.txt  run_gemini_cli.sh
containers/gemini/: build.sh  gemini-cli-container  run_gemini_cli.sh  settings.json
containers/opencode/: build.sh  opencode_container  run.sh  run_gemini_cli.sh
contributing/: index.html
contributing/code-style/: index.html
contributing/development/: index.html
docs/: changelog.md  hosting.md  index.md  installation.md  quickstart.md
docs/api/: index.md
docs/api/cluster/: index.md  remote.md  sessions.md
docs/api/jobs/: index.md  installer.md
docs/api/utils/: index.md
docs/cli/: cloud.md  devops.md  fire.md  index.md  mcfg.md  sessions.md
docs/contributing/: code-style.md  development.md  index.md
docs/guide/: automation.md  configuration.md  data-sync.md  dotfiles.md  overview.md  packages.md
docs/includes/: abbreviations.md
docs/overrides/: .gitkeep
guide/automation/: index.html
guide/configuration/: index.html
guide/data-sync/: index.html
guide/dotfiles/: index.html
guide/overview/: index.html
hosting/: index.html
includes/abbreviations/: index.html
installation/: index.html
jobs/containers/: build.sh  gemini_cli_docker_image
jobs/dockers/: Dockerfile_ai  Dockerfile_slim
jobs/shell/: build_and_publish.sh  build_binaries.sh  docker_build_and_publish.sh  install_dev.sh  install_plot.sh
quickstart/: index.html
scripts/: lint_and_type_check.sh
scripts/ai/: generate_file_checklist.py  pomodoro.py
scripts/python/: pomodoro.py  start_slidev.py
search/: search_index.json
settings/: .tmux.config
settings/broot/: brootcd.ps1
settings/helix/: config.toml  languages.toml
settings/lf/: cd_zoxide2.ps1  copy_path.ps1  fzf_integration.ps1  leftpane_previewer.ps1  lfcd.ps1  lfrc
settings/lf_linux/: extract.cmd  fzf_nano.sh  leftpane_previewer.sh  lfrc  previewer.sh
settings/lf_linux/exe/: lfcd.sh  previewer.sh
settings/lvim/: config.lua
settings/lvim_linux/: config.lua
settings/lvim_windows/: config.lua  config_additonal.lua
settings/lvim_windows/archive/: config_additional.lua
settings/shells/wt/: settings.json  settings.org.json
settings/svim_windows/: init.toml
settings/tere/: terecd.ps1  terecd.sh
settings/tmux/: .tmate.conf  .tmux.conf
settings/zellij/: config.kdl  config.yaml
settings/zellij/layouts/: default.kdl  e.kdl  m.kdl  me.kdl  p.kdl
settings/zellij/themes/: dracula.kdl
src/: __init__.py
src/machineconfig/: __init__.py  create_symlinks.py  logger.py
src/machineconfig/cluster/: cloud_manager.py  data_transfer.py  distribute.py  file_manager.py  job_params.py  loader_runner.py  remote_machine.py  script_execution.py  script_notify_upon_completion.py  self_ssh.py  session_managers.py
src/machineconfig/jobs/: backup_retrieve.py  create_bootable_media.py  repos.py  setup_machine.py  setup_windows.py  utils.py
src/machineconfig/linux_setup/: setup_linux.bash  setup_linux_apps.bash  setup_repos.bash  setup_ve.bash
src/machineconfig/misc/: send2remote.py  vars.py
src/machineconfig/profile/: backup.toml  bash_shell_profiles.md  create.py  create_frontend.py  create_hardlinks.py  create_helper.py  create_links.py  create_links_export.py  create_shell_profile.py  creator_frontend.py  env_path.toml  mapper.toml  mapper_data.toml  mapper_dotfiles.toml  shell.py  sources.toml
src/machineconfig/scripts/: Restore-ThunderbirdProfile.ps1  __init__.py
src/machineconfig/setup_linux/: __init__.py  apps.sh  apps_desktop.sh  apps_dev.sh  apps_gui.sh  apps_setup.sh  croshell.sh  devapps.sh  devapps_setup.sh  machineconfig.sh  openssh-server.sh  openssh-server_add-sshkey.sh  openssh-server_add_pub_key.sh  openssh-server_chmod.sh  openssh_all.sh  openssh_server_add_sshkey.sh  openssh_server_copy_ssh_id.sh  openssh_server_installation.sh  openssh_wsl..sh  openssh_wsl.sh  quirks.sh  repos.sh  repos_setup.sh  setup_linux_apps.sh  setup_repos.sh  setup_ssh.sh  setup_ve.sh  symlinks.sh  symlinks2windows.sh  symlinks_setup.sh  uv.sh  ve.sh  ve.sh.orig  ve_setup.sh
src/machineconfig/setup_mac/: __init__.py  apps.sh  apps_gui.sh  uv.sh
src/machineconfig/setup_windows/: __init__.py  apps.ps1  apps_setup.ps1  croshell.ps1  devapps.ps1  devapps_setup.ps1  install_croshell.ps1  repos.ps1  ve  (+21 more)
stylesheets/: extra.css
tests/: __init__.py  test_macos_installation.py
(+1424 files in other folders)
