[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[project]
name = "machineconfig"
version = "7.93"
description = "Dotfiles management package"
readme = "README.md"
license = {text = "Apache 2.0"}
authors = [
    {name = "Alex Al-Saffar", email = "programmer@usa.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13"
dependencies = [
    "cryptography>=44.0.2",
    "fire>=0.7.0",
    "joblib>=1.5.2",
    "paramiko>=3.5.1",
    "randomname>=0.2.1",
    "requests>=2.32.5",
    "rich>=14.0.0",
    "tenacity>=9.1.2",
    "psutil>=7.0.0",
    "gitpython>=3.1.44",
    "rclone-python>=0.1.23",
    "questionary>=2.1.1",
    "typer-slim>=0.19.2",
    "typer>=0.19.2",
]

[project.optional-dependencies]
windows = [
    "pywin32"
]
plot = [
    "sqlalchemy>=2.0.43",
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "jupyterlab>=4.4.9",
    "kaleido>=1.1.0",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "numpy>=2.3.3",
    "plotly>=6.3.0",
    "polars>=1.33.1",
    "python-magic>=0.4.27",
]


[project.urls]
"Homepage" = "https://github.com/thisismygitrepo/machineconfig"
"Bug Tracker" = "https://github.com/thisismygitrepo/machineconfig/issues"

[project.scripts]
devops = "machineconfig.scripts.python.devops:main"
cloud = "machineconfig.scripts.python.cloud:main"
fire = "machineconfig.scripts.python.fire_jobs:main"
agents = "machineconfig.scripts.python.agents:main"
sessions = "machineconfig.scripts.python.sessions:main"
croshell = "machineconfig.scripts.python.croshell:main"
ftpx = "machineconfig.scripts.python.ftpx:main"
utils = "machineconfig.scripts.python.utils:main"
mcfg = "machineconfig.scripts.python.mcfg_entry:main"
machineconfig = "machineconfig.scripts.python.mcfg_entry:main"
terminal = "machineconfig.scripts.python.terminal:main"
msearch = "machineconfig.scripts.python.msearch:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
license-files = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
machineconfig = ["**/*.toml", "**/*.md", "**/*.sh", "**/*.ps1", "**/*.txt"]

[dependency-groups]
dev = [
    "aider>=0.2.6",
    "build>=1.3.0",
    "cleanpy>=0.5.1",
    "cowsay>=6.1",
    # "duckdb-engine>=0.17.0",
    "ipdb>=0.13.13",
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "marimo>=0.17.2",
    "matplotlib>=3.10.6",
    "mypy>=1.18.2",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.0",
    "polars>=1.34.0",
    "pre-commit>=4.3.0",
    "pudb>=2025.1",
    "pylint>=3.3.8",
    "pylsp-mypy>=0.7.0",
    "pymupdf>=1.26.5",
    "pypdf>=6.1.1",
    "pyrefly>=0.33.1",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "python-lsp-server[all]>=1.13.1",
    "qrcode>=8.2",
    "ruff>=0.13.1",
    "ruff-lsp>=0.0.62",
    "sqlalchemy>=2.0.43",
    "textual>=6.1.0",
    "trogon>=0.6.0",
    "ty>=0.0.1a21",
    "types-mysqlclient>=2.2.0.20250915",
    "types-paramiko>=4.0.0.20250822",
    "types-pytz>=2025.2.0.20250809",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
    "types-sqlalchemy>=1.4.53.38",
    "types-toml>=0.10.8.20240310",
    "types-urllib3>=1.26.25.14",
    "yapf>=0.43.0",
]

other = [
    "duckdb-engine>=0.17.0",
    "pycrucible>=0.3.0",
    "vt-py>=0.21.0",
#     "euporie>=2.8.14",
#    "py7zr>=1.0.0",

]


[tool.pycrucible]
entry = "src/machineconfig/scripts/python/devops.py"
[tool.pycrucible.options]
debug = false
extract_to_temp = false
delete_after_run = false
offline_mode = false

[tool.pycrucible.patterns]
include = [
    "**/*.py",
    "**/*.ps1",
    "**/*.sh",
    "**/*.md",
]
exclude = [
    "**/__pycache__/**",
]

