[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[project]
name = "machineconfig"
version = "8.80"
description = "Dotfiles management package"
readme = "README.md"
license = {text = "Apache 2.0"}
authors = [
    {name = "Alex Al-Saffar", email = "programmer@usa.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.5",
    "fire>=0.7.1",
    "gitpython>=3.1.46",
    "joblib>=1.5.3",
    "paramiko>=4.0.0",
    "psutil>=7.2.2",
    "pyyaml>=6.0.3",
    "questionary>=2.1.1",
    "randomname>=0.2.1",
    "rclone-python>=0.1.24",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "tenacity>=9.1.4",
    "typer>=0.24.1",
]

[project.optional-dependencies]
windows = []
plot = [
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "jupyterlab>=4.5.5",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "plotly>=6.5.2",
    "polars>=1.38.1",
    "python-magic>=0.4.27",
    "sqlalchemy>=2.0.47",
]


[project.urls]
"Homepage" = "https://github.com/thisismygitrepo/machineconfig"
"Bug Tracker" = "https://github.com/thisismygitrepo/machineconfig/issues"

[project.scripts]
devops = "machineconfig.scripts.python.devops:main"
cloud = "machineconfig.scripts.python.cloud:main"
fire = "machineconfig.scripts.python.fire_jobs:main"
agents = "machineconfig.scripts.python.agents:main"
sessions = "machineconfig.scripts.python.sessions:main"
croshell = "machineconfig.scripts.python.croshell:main"
utils = "machineconfig.scripts.python.utils:main"
mcfg = "machineconfig.scripts.python.mcfg_entry:main"
machineconfig = "machineconfig.scripts.python.mcfg_entry:main"
msearch = "machineconfig.scripts.python.msearch:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
license-files = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
machineconfig = ["**/*.toml", "**/*.md", "**/*.sh", "**/*.ps1", "**/*.txt"]

[dependency-groups]
dev = [
    "aider>=0.2.6",
    "build>=1.4.0",
    "cleanpy>=0.5.1",
    "cowsay>=6.1",
    "duckdb>=1.4.4",
    "gdown>=5.2.1",
    "github-copilot-sdk>=0.1.25",
    "ipdb>=0.13.13",
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "kaleido>=1.2.0",
    "marimo>=0.20.2",
    "matplotlib>=3.10.8",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.4",
    "mkdocs-material>=9.7.3",
    "mkdocstrings>=1.0.3",
    "mkdocstrings-python>=2.0.3",
    "mypy>=1.19.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "polars>=1.38.1",
    "pre-commit>=4.5.1",
    "pudb>=2025.1.5",
    "pydantic>=2.12.5",
    "pydeps>=3.0.2",
    "pyinstaller>=6.19.0",
    "pylint>=4.0.5",
    "pylsp-mypy>=0.7.1",
    "pymupdf>=1.27.1",
    "pypdf>=6.7.3",
    "pyrefly>=0.54.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "python-lsp-server>=1.14.0",
    "qrcode>=8.2",
    "ruff>=0.15.4",
    "ruff-lsp>=0.0.62",
    "sqlalchemy>=2.0.47",
    "textual>=8.0.0",
    "trogon>=0.6.0",
    "ty>=0.0.19",
    "types-mysqlclient>=2.2.0.20250915",
    "types-paramiko>=4.0.0.20250822",
    "types-pytz>=2025.2.0.20251108",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20260107",
    "types-sqlalchemy>=1.4.53.38",
    "types-toml>=0.10.8.20240310",
    "types-urllib3>=1.26.25.14",
    "vt-py>=0.22.0",
    "yapf>=0.43.0",
]
other = [
    "duckdb-engine>=0.17.0",
    "pycrucible>=0.4.4",
    "vt-py>=0.22.0",
]
plot = [
    "duckdb>=1.4.4",
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "jupyterlab>=4.5.5",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "plotly>=6.5.2",
    "polars>=1.38.1",
    "python-magic>=0.4.27",
    "sqlalchemy>=2.0.47",
]


[tool.pycrucible]
entry = "src/machineconfig/scripts/python/devops.py"
[tool.pycrucible.options]
debug = false
extract_to_temp = false
delete_after_run = false
offline_mode = false

[tool.pycrucible.patterns]
include = [
    "**/*.py",
    "**/*.ps1",
    "**/*.sh",
    "**/*.md",
]
exclude = [
    "**/__pycache__/**",
]
